After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660632 - missing setlocale call
missing setlocale call
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: printers
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Marek Kašík
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-10-01 13:55 UTC by Matthias Clasen
Modified: 2011-10-07 21:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matthias Clasen 2011-10-01 13:55:23 UTC
I don't see any setlocale call in gsd-printer.c main(), which means that your notifications will not be translated.
Comment 1 Bastien Nocera 2011-10-07 21:03:18 UTC
commit 35cda8c423f3c9639ff63c15a5432c9ea03c4282
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Oct 7 22:02:07 2011 +0100

    automount: Call bind_textdomain_codeset()
    
    Which should avoid some problems in non-UTF-8 locales.