print-notifications: Call setlocale()

So that translations work.

https://bugzilla.gnome.org/show_bug.cgi?id=660632